admin area updated

--- a/BookLibraryClient/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/admin-dashboard.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-12">
       <app-book-control></app-book-control>
       <app-author-control></app-author-control>
-      <app-get-country></app-get-country>
+      <app-country-control></app-country-control>
       <app-genre-control></app-genre-control>
       <app-language-control></app-language-control>
       <app-publisher-control></app-publisher-control>
