--- a/BookLibraryClient/src/app/admin-dashboard/components/user/user-control/user-control.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/user/user-control/user-control.component.html
@@ -7,8 +7,7 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Username</th>
-            <th scope="col">Orders</th>
-            <th scope="col">Books</th>
+            <th scope="col">User Basket</th>
             <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
@@ -18,20 +17,12 @@
             <th scope="row">{{user.id}}</th>
             <td>{{user.username}}</td>
             <td>
-              <ng-container *ngFor="let order of user.orders, let i = index">
+              <ng-container *ngIf="user.userBasket">
+              <ng-container *ngFor="let book of user.userBasket!.books!, let i = index">
                 <ng-container *ngIf="i > 0">,</ng-container>
-                {{order.id}}
+                {{book.title}}
               </ng-container>
-            </td>
-            <td>
-              <ng-container *ngFor="let order of user.orders, let i = index">
-                <ng-container *ngIf="i > 0"> <br> </ng-container>
-                Order ID - {{order.id + ':'}} 
-                <ng-container *ngFor="let book of order.books, let j = index">
-                  <ng-container *ngIf="j > 0">,</ng-container>
-                  {{book.title}}
-                </ng-container>
-              </ng-container>
+            </ng-container>
             </td>
             <td><button class="btn btn-warning" routerLink="/admin/userControl/updateUser/{{user.id}}">Edit</button>
             </td>
