--- a/BookLibraryClient/src/app/user-dashboard/components/available-books/available-books.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/available-books/available-books.component.html
@@ -35,7 +35,7 @@
                   </p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Rent</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary" (click)="addToBasket(book.id)">Rent</button>
                       <button type="button" class="btn btn-sm btn-outline-secondary"
                         routerLink="/admin/book/{{book.id}}">See
                         details</button>
