--- a/BookLibraryClient/src/app/dashboard/dashboard.component.html
+++ b/BookLibraryClient/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <body class="about-us bg-gray-200">
   <!-- -------- START HEADER 7 w/ text and video ------- -->
   <header class="bg-gradient-dark">
-    <div class="page-header min-vh-75" style="background-image: url('../assets/img/bg9.jpg');">
+    <div class="page-header min-vh-75" style="background-image: url('');">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row justify-content-center">
