--- a/BookLibraryClient/src/app/app.component.html
+++ b/BookLibraryClient/src/app/app.component.html
@@ -14,6 +14,8 @@
     </div>
   </div>
   <div class="row">
-    <app-footer></app-footer>
+    <div class="col">
+      <app-footer></app-footer>
+    </div>
   </div>
 </div>
