bookDetails and userProfile added

--- a/BookLibraryClient/src/app/dashboard/dashboard.component.html
+++ b/BookLibraryClient/src/app/dashboard/dashboard.component.html
@@ -9,8 +9,8 @@
             <h1 class="text-white">Welcome to Book Library</h1>
             <p class="lead mb-4 text-white opacity-8">We’re constantly trying to express ourselves and actualize our
               dreams. Join Us!</p>
-            <button type="submit" class="btn bg-white text-dark" (click)="register()">Create Account</button>
-            <button type="submit" class="btn bg-white text-dark" (click)="login()">Login</button>
+            <button type="submit" class="btn bg-white text-dark" (click)="register()" style="margin-right:50px">Create Account</button>
+            <button type="submit" class="btn bg-white text-dark" (click)="login()" style="margin-right:50px">Login</button>
             <h6 class="text-white mb-2 mt-5">Find us on</h6>
             <div class="d-flex justify-content-center">
               <a href="javascript:;"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
