--- a/BookLibraryClient/src/app/user-dashboard/components/new-arrivals/new-arrivals.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/new-arrivals/new-arrivals.component.html
@@ -23,7 +23,7 @@
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Rent</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary"
-                    routerLink="/admin/book/{{book.id}}">See details</button>
+                    routerLink="/user/book/{{book.id}}">See details</button>
                 </div>
                 <small class="text-muted">Price:{{book.rentalPrice}}</small>
               </div>
