--- a/BookLibraryClient/src/app/shared/navbar/navbar.component.html
+++ b/BookLibraryClient/src/app/shared/navbar/navbar.component.html
@@ -27,100 +27,102 @@
       </li>
     </ul>
   </nav> -->
+  
   <div id="app" class="app app-header-fixed app-sidebar-fixed">
-  <!-- BEGIN #header -->
-  <div id="header" class="app-header">
-    <!-- BEGIN navbar-header -->
-    <div class="navbar-header">
-      <a href="index.html" class="navbar-brand"><span class="navbar-logo"></span> <b>Book</b> Library</a>
-      <button type="button" class="navbar-mobile-toggler" data-toggle="app-sidebar-mobile">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-    <!-- END navbar-header -->
-
-    <!-- BEGIN header-nav -->
-    <div class="navbar-nav">
-      <div class="navbar-item navbar-form">
-        <form action="" method="POST" name="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Enter keyword" />
-            <button type="submit" class="btn btn-search"><i class="fa fa-search"></i></button>
-          </div>
-        </form>
+    <!-- BEGIN #header -->
+    <div id="header" class="app-header">
+      <!-- BEGIN navbar-header -->
+      <div class="navbar-header">
+        <a href="index.html" class="navbar-brand"><span class="navbar-logo"></span> <b>Book</b> Library</a>
+        <button type="button" class="navbar-mobile-toggler" data-toggle="app-sidebar-mobile">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
       </div>
-      <div class="navbar-item dropdown">
-        <ng-container *ngIf="user.userBasket">
-        <a href="#" data-bs-toggle="dropdown" class="navbar-link dropdown-toggle fs-14px">
-          <i class="fa fa-cart-plus"></i>
-          <ng-container *ngIf="isLogged || isAdminLogged"><span class="badge">{{user.userBasket.books.length!}}</span></ng-container>
-        </a>
-        <div class="dropdown-menu media-list dropdown-menu-end">
-          <div class="dropdown-header">CART</div>
-          <div class="text-center w-300px py-3">
-            <ng-container *ngIf="isLogged === false && isAdminLogged === false">Login to see cart</ng-container>
-            <ng-container *ngIf="isLogged || isAdminLogged">
-              <div *ngFor="let book of user.userBasket.books; let i = index">
-                <ul>
-                  <li>{{i+1}}. {{book.title}} <br> Rental Price:{{book.rentalPrice}}</li>
-                </ul>
-              </div>
-              <hr>
-              <button class="btn btn-primary" routerLink="/user/userBasket">Go to cart</button>
-            </ng-container>
-          </div>
-        </div>
-      </ng-container> 
-      <ng-container *ngIf="user.userBasket! === null ">
-        <a href="#" data-bs-toggle="dropdown" class="navbar-link dropdown-toggle fs-14px">
-          <i class="fa fa-cart-plus"></i>
-          <span class="badge">0</span>
-        </a>
-        <div class="dropdown-menu media-list dropdown-menu-end">
-          <div class="dropdown-header">CART</div>
-          <div class="text-center w-300px py-3">
-            Cart is empty
-          </div>
-        </div>
-      </ng-container>
-      </div>
-    
-      <div class="navbar-item navbar-user dropdown">
-        <ng-container *ngIf="isLogged === false && isAdminLogged === false">
-          <a href="#" class="navbar-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
-            <div class="image image-icon bg-gray-800 text-gray-600">
-              <i class="fa fa-user"></i>
+      <!-- END navbar-header -->
+  
+      <!-- BEGIN header-nav -->
+      <div class="navbar-nav">
+        <div class="navbar-item navbar-form">
+          <form action="" method="POST" name="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Enter keyword" />
+              <button type="submit" class="btn btn-search"><i class="fa fa-search"></i></button>
             </div>
-            <span class="d-none d-md-inline">My Profile</span>
+          </form>
+        </div>
+        <div class="navbar-item dropdown">
+          <ng-container *ngIf="user.userBasket">
+          <a href="#" data-bs-toggle="dropdown" class="navbar-link dropdown-toggle fs-14px">
+            <i class="fa fa-cart-plus"></i>
+            <ng-container *ngIf="isLogged || isAdminLogged"><span class="badge">{{user.userBasket.books.length!}}</span></ng-container>
           </a>
-          <div class="dropdown-menu dropdown-menu-end me-1">
-            <div class="dropdown-divider"></div>
-            <a routerLink="/login" class="dropdown-item">Login</a>
-            <a routerLink="/register" class="dropdown-item">Register</a>
+          <div class="dropdown-menu media-list dropdown-menu-end">
+            <div class="dropdown-header">CART</div>
+            <div class="text-center w-300px py-3">
+              <ng-container *ngIf="isLogged === false && isAdminLogged === false">Login to see cart</ng-container>
+              <ng-container *ngIf="isLogged || isAdminLogged">
+                <div *ngFor="let book of user.userBasket.books; let i = index">
+                  <ul>
+                    <li>{{i+1}}. {{book.title}} <br> Rental Price:{{book.rentalPrice}}</li>
+                  </ul>
+                </div>
+                <hr>
+                <button class="btn btn-primary" routerLink="/user/userBasket">Go to cart</button>
+              </ng-container>
+            </div>
+          </div>
+        </ng-container> 
+        <ng-container *ngIf="user.userBasket! === null ">
+          <a href="#" data-bs-toggle="dropdown" class="navbar-link dropdown-toggle fs-14px">
+            <i class="fa fa-cart-plus"></i>
+            <span class="badge">0</span>
+          </a>
+          <div class="dropdown-menu media-list dropdown-menu-end">
+            <div class="dropdown-header">CART</div>
+            <div class="text-center w-300px py-3">
+              Cart is empty
+            </div>
           </div>
         </ng-container>
-        <ng-container *ngIf="isLogged || isAdminLogged">
-        <a href="#" class="navbar-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
-          <div class="image image-icon bg-gray-2000 text-gray-2000">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp" class="img-fluid rounded-3"
-                          style="width: 80px;" alt="Avatar">
-          </div>
-          <span class="d-none d-md-inline">{{user.firstName! + ' ' + user.lastName!}}</span>
-        </a>
-        <div class="dropdown-menu dropdown-menu-end me-1">
-          <a routerLink="/admin/userControl/updateUser/{{user.id!}}" class="dropdown-item">Edit Profile</a>
-          <a routerLink="/user/lastRentals/" class="dropdown-item"><span class="badge badge-danger float-end">2</span>
-            My Rentlas</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
-      </ng-container>
+      
+        <div class="navbar-item navbar-user dropdown">
+          <ng-container *ngIf="isLogged === false && isAdminLogged === false">
+            <a href="#" class="navbar-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+              <div class="image image-icon bg-gray-800 text-gray-600">
+                <i class="fa fa-user"></i>
+              </div>
+              <span class="d-none d-md-inline">My Profile</span>
+            </a>
+            <div class="dropdown-menu dropdown-menu-end me-1">
+              <div class="dropdown-divider"></div>
+              <a routerLink="/login" class="dropdown-item">Login</a>
+              <a routerLink="/register" class="dropdown-item">Register</a>
+            </div>
+          </ng-container>
+          <ng-container *ngIf="isLogged || isAdminLogged">
+          <a href="#" class="navbar-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+            <div class="image image-icon bg-gray-2000 text-gray-2000">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp" class="img-fluid rounded-3"
+                            style="width: 80px;" alt="Avatar">
+            </div>
+            <span class="d-none d-md-inline">{{user.firstName! + ' ' + user.lastName!}}</span>
+          </a>
+          <div class="dropdown-menu dropdown-menu-end me-1">
+            <a routerLink="/user/myProfile" class="dropdown-item" *ngIf="user.role == 2">Edit Profile</a>
+            <a routerLink="/admin/userControl/updateUser/{{user.id!}}" class="dropdown-item" *ngIf="user.role == 0">Edit Profile</a>
+            <a routerLink="/user/lastRentals/" class="dropdown-item"><span class="badge badge-danger float-end"></span>
+              My Rentlas</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" (click)="logout()">Log Out</a>
+          </div>
+        </ng-container>
+        </div>
       </div>
+      <!-- END header-nav -->
+    
+    <!-- END #header -->
     </div>
-    <!-- END header-nav -->
-  
-  <!-- END #header -->
   </div>
-</div>
