--- a/BookLibraryClient/src/app/user-dashboard/components/available-books/available-books.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/available-books/available-books.component.html
@@ -37,7 +37,7 @@
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary" (click)="addToBasket(book.id)">Rent</button>
                       <button type="button" class="btn btn-sm btn-outline-secondary"
-                        routerLink="/admin/book/{{book.id}}">See
+                        routerLink="/user/book/{{book.id}}">See
                         details</button>
                     </div>
                     <small class="text-muted">Price:{{book.rentalPrice}}</small>
