--- a/BookLibraryClient/src/app/user-dashboard/components/top-rentals/top-rentals.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/top-rentals/top-rentals.component.html
@@ -26,7 +26,7 @@
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary">Rent</button>
                     <button type="button" class="btn btn-sm btn-outline-secondary"
-                      routerLink="/admin/book/{{book.id}}">See
+                      routerLink="/user/book/{{book.id}}">See
                       details</button>
                   </div>
                   <small class="text-muted">Price:{{book.rentalPrice}}</small>
@@ -55,7 +55,7 @@
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">Rent</button>
                       <button type="button" class="btn btn-sm btn-outline-secondary"
-                        routerLink="/admin/book/{{book.id}}">See
+                        routerLink="/user/book/{{book.id}}">See
                         details</button>
                     </div>
                     <small class="text-muted">Price:{{book.rentalPrice}}</small>
